--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SistemaMedico
+
+spring.datasource.url=jbdc:mysql://localhost:3306/servicio_medico
+spring.datasource.username=root
+spring.datasource.password=
+
+
+spring.jpa.hibernate.ddl-auto=update
